// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Button Inverse 1`] = `
<button
  className="sc-AxjAm gBPCBv"
  size="md"
  style={Object {}}
>
  <p
    className="sc-AxhUy fa-DQCS"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Large 1`] = `
<button
  className="sc-AxjAm UKiHR"
  size="lg"
  style={Object {}}
>
  <p
    className="sc-AxhUy fa-DQCS"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Medium 1`] = `
<button
  className="sc-AxjAm cvqeIJ"
  size="md"
  style={Object {}}
>
  <p
    className="sc-AxhUy fa-DQCS"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Small 1`] = `
<button
  className="sc-AxjAm fNGIKE"
  size="sm"
  style={Object {}}
>
  <p
    className="sc-AxhUy fa-DQCS"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button/Cookie Cookie 1`] = `
<div
  className="sc-fzokOt doFRUo"
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzozJi iOrtLq normal"
    style={Object {}}
  >
    <p
      className="sc-AxhUy fa-DQCS"
      style={Object {}}
    >
      Save Settings
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Cookie Cookie Inverse 1`] = `
<div
  className="sc-fzokOt doFRUo"
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzozJi iOrtLq inverse"
    style={Object {}}
  >
    <p
      className="sc-AxhUy fa-DQCS"
      style={Object {}}
    >
      Cookie Preferences
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Custom Cookie 1`] = `
<div
  className="sc-fzokOt doFRUo"
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzozJi iOrtLq normal"
    style={Object {}}
  >
    <p
      className="sc-AxhUy fa-DQCS"
      style={Object {}}
    >
      Save Settings
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Custom Cookie Inverse 1`] = `
<div
  className="sc-fzokOt doFRUo"
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzozJi iOrtLq inverse"
    style={Object {}}
  >
    <p
      className="sc-AxhUy fa-DQCS"
      style={Object {}}
    >
      Cookie Preferences
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Custom Globe 1`] = `
<button
  className="sc-AxjAm jCtvLM sc-fzoLsD cOrIpp"
  style={Object {}}
>
  <div
    className="sc-fzplWN bcoWYt"
    style={Object {}}
  >
    <div
      className="sc-AxirZ geEfWa sc-fzpans cWcYRr globe"
      style={Object {}}
    >
      <svg
        className="sc-AxiKw bkgzSv"
      />
    </div>
    <div
      className="sc-AxirZ geEfWa sc-fzpans cWcYRr arrow"
      style={Object {}}
    >
      <svg
        className="sc-AxiKw bkgzSv"
      />
    </div>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Button/Custom Menu 1`] = `
<button
  className="sc-AxjAm jCtvLM sc-fznyAO iZtzaS"
  style={Object {}}
>
  <div
    className="sc-fznKkj ebJJPw"
    style={Object {}}
  >
    <div
      className="sc-AxirZ geEfWa sc-fznZeY bmvrTm bars"
      style={Object {}}
    >
      <svg
        className="sc-AxiKw bkgzSv"
      />
    </div>
    <div
      className="sc-AxirZ geEfWa sc-fznZeY bmvrTm avatar"
      style={Object {}}
    >
      <svg
        className="sc-AxiKw bkgzSv"
      />
    </div>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Button/Custom Search 1`] = `
<button
  className="sc-AxjAm jCtvLM sc-AxgMl ffnbCP"
  style={Object {}}
>
  <div
    className="sc-AxheI JGUfr"
    style={Object {}}
  >
    <div
      className="sc-AxirZ geEfWa sc-Axmtr bFeZIB"
      style={Object {}}
    >
      <svg
        className="sc-AxiKw bkgzSv"
      />
    </div>
    <p
      className="sc-AxhUy fa-DQCS sc-AxmLO cyibMK"
      style={Object {}}
    >
      Search
    </p>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Card/Dark Large 1`] = `
<div
  className="sc-fznxsB GiIpr large"
  style={Object {}}
>
  <div
    className="sc-fzqBZW bpUYqP"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv large"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzoXzr lcccRY"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Dark Medium 1`] = `
<div
  className="sc-fznxsB GiIpr medium"
  style={Object {}}
>
  <div
    className="sc-fzqBZW bpUYqP"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzoXzr lcccRY"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Dark Small 1`] = `
<div
  className="sc-fznxsB GiIpr small"
  style={Object {}}
>
  <div
    className="sc-fzqBZW bpUYqP"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzoXzr lcccRY"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light Base 1`] = `
<div
  className="sc-fznJRM iPVShm single"
  style={Object {}}
>
  <div
    className="sc-fzqBZW fexrTL"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzoLag feIeBh"
        style={Object {}}
      >
        Online experiences
      </p>
      <p
        className="sc-AxhUy fa-DQCS sc-fzpjYC hcZXRC"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light Multiple 1`] = `
<div
  className="sc-fznJRM iPVShm multiple"
  style={Object {}}
>
  <div
    className="sc-fzqBZW fexrTL"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzpjYC hcZXRC"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
  <div
    className="sc-fzqBZW fexrTL"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzpjYC hcZXRC"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
  <div
    className="sc-fzqBZW fexrTL"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzpjYC hcZXRC"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light No Title 1`] = `
<div
  className="sc-fznJRM iPVShm single"
  style={Object {}}
>
  <div
    className="sc-fzqBZW fexrTL"
    style={Object {}}
  >
    <div
      className="sc-fzqNJr TycFK"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxhCb fYOfzf"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzoyAV gXssZv normal"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzpjYC hcZXRC"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Section Black Lives Matter 1`] = `
<div
  className="sc-fznWqX kmFryS"
  style={Object {}}
>
  <div
    className="sc-fzoiQi dRYptN"
    style={Object {}}
  >
    <div
      className="sc-fzqARJ biqrvZ"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzqNqU bWwYyJ"
        style={Object {}}
      >
        We stand with #BlackLivesMatter
      </p>
      <p
        className="sc-AxhUy fa-DQCS sc-fzoyTs krcdJP"
        style={Object {}}
      >
        We believe in a world where everyone belongs. We reject all racism that stands in the way.
      </p>
      <p
        className="sc-AxhUy fa-DQCS sc-fzoNJl fhNrVh"
        style={Object {}}
      >
        Donate
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Header Landing 1`] = `
<div
  className="sc-fznAgC loFwZq"
  style={Object {}}
>
  <div
    style={Object {}}
  >
    <div
      className="sc-fzoJMP gAzsmC"
      style={Object {}}
    >
      <div
        className="sc-AxirZ geEfWa"
        style={Object {}}
      >
        <svg
          className="sc-AxiKw bkgzSv"
        />
      </div>
    </div>
    <div
      className="sc-fzoYHE jFJDaF"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS"
        style={Object {}}
      >
        header
      </p>
    </div>
    <div
      className="sc-fzpkqZ kmZxWu"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots Design Systems/Notification Cookie 1`] = `
<div
  style={Object {}}
>
  <div
    className="sc-fznLPX dRRnSu"
    style={Object {}}
  >
    <div
      className="sc-fzoaKM gBxcFG"
      style={Object {}}
    >
      <div
        className="sc-fzqAui ewvRWp text"
        style={Object {}}
      >
        <div
          className="sc-fzomuh jzPYFn"
          style={Object {}}
        >
          <p
            className="sc-AxhUy fa-DQCS sc-fzoJus gscAGn"
            style={Object {}}
          >
            Your Privacy
          </p>
          <div
            className="sc-AxirZ geEfWa sc-fzqMdD iMczSx"
            style={Object {}}
          >
            <svg
              className="sc-AxiKw bkgzSv"
            />
          </div>
        </div>
        <p
          className="sc-AxhUy fa-DQCS sc-fzoVTD cROrzp"
          style={Object {}}
        >
          We use cookies to help personalize content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Airbnb. Read our Cookie Policy to learn more or go to Cookie Preferences to manage your settings
        </p>
      </div>
      <div
        className="sc-fzqAui ewvRWp buttons"
        style={Object {}}
      >
        <div
          className="sc-fzowVh fumouP"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fzozJi iOrtLq normal"
            onClick={[Function]}
            style={Object {}}
          >
            <p
              className="sc-AxhUy fa-DQCS"
              style={Object {}}
            >
              Save Settings
            </p>
          </button>
          <button
            className="sc-AxjAm jCtvLM sc-fzozJi iOrtLq inverse"
            onClick={[Function]}
            style={Object {}}
          >
            <p
              className="sc-AxhUy fa-DQCS"
              style={Object {}}
            >
              Cookie Preferences
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Large 1`] = `
<div
  style={Object {}}
>
  <div
    style={Object {}}
  >
    <div
      className="sc-fzoXWK cthpes"
      style={Object {}}
    >
      <div
        className="sc-fzoKki bheEhg"
        style={Object {}}
      >
        <div
          className="sc-fzpmMD cjElyT first"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fznxKY kgAUAW first"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzqBkg iBiMdB"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Location
              </p>
            </div>
            <div
              className="sc-fzqPZZ fljZHr"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Where are you going?
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fzpmMD cjElyT second"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fznxKY kgAUAW"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzqBkg iBiMdB"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Check in
              </p>
            </div>
            <div
              className="sc-fzqPZZ fljZHr"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Add dates
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fzpmMD cjElyT third"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fznxKY kgAUAW"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzqBkg iBiMdB"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Check out
              </p>
            </div>
            <div
              className="sc-fzqPZZ fljZHr"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Add dates
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fznMAR chrofJ"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fznxKY kgAUAW last"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzqBkg iBiMdB"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Guests
              </p>
            </div>
            <div
              className="sc-fzqPZZ fljZHr"
              style={Object {}}
            >
              <p
                className="sc-AxhUy fa-DQCS"
                style={Object {}}
              >
                Add guests
              </p>
            </div>
          </button>
          <button
            className="sc-AxjAm jCtvLM sc-AxgMl ffnbCP sc-fzolEj HkYTe"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-AxheI JGUfr"
              style={Object {}}
            >
              <div
                className="sc-AxirZ geEfWa sc-Axmtr bFeZIB"
                style={Object {}}
              >
                <svg
                  className="sc-AxiKw bkgzSv"
                />
              </div>
              <p
                className="sc-AxhUy fa-DQCS sc-AxmLO cyibMK"
                style={Object {}}
              >
                Search
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fznWOq etWaPr first"
          style={Object {}}
        />
        <div
          className="sc-fznWOq etWaPr second"
          style={Object {}}
        />
        <div
          className="sc-fznWOq etWaPr third"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Medium 1`] = `
<div
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzoYkl dDXAxn"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="sc-fzpkJw iYzWpS"
      style={Object {}}
    >
      <div
        className="sc-AxirZ geEfWa sc-fznzOf cvBmMp"
        style={Object {}}
      >
        <svg
          className="sc-AxiKw bkgzSv"
        />
      </div>
      <p
        className="sc-AxhUy fa-DQCS sc-fznMnq jwKLdH"
        style={Object {}}
      >
        Where are you going?
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Small 1`] = `
<div
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzoant eIBsuj"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="sc-fzoydu gEDNkd"
      style={Object {}}
    >
      <p
        className="sc-AxhUy fa-DQCS sc-fzomME hmTfGQ"
        style={Object {}}
      >
        Start your search
      </p>
      <div
        className="sc-fzqAbL kvjULs"
        style={Object {}}
      >
        <div
          className="sc-AxirZ geEfWa sc-fzqMAW cthcwF"
          style={Object {}}
        >
          <svg
            className="sc-AxiKw bkgzSv"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;
